chore: Moved test jvm constraint logic to convention plugin